update ddd 3
